--- a/css/style.css
+++ b/css/style.css
@@ -2,10 +2,18 @@ html, body{
   width: 100%;
   height: 100%;
   background-color: green;
+  
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 button{
   padding: 10px;
   border: 0;
   border-radius: 10px;
+}
+
+.container{
+
 }
